# ModeloMisturaGaussianas

./: .gitignore  CMakeLists.txt  Gaussiana.cpp  Gaussiana.hpp  Modelo.cpp  Modelo.hpp  Pixel.cpp  Pixel.hpp  README.md  a.out  gaussiana.cpp  gaussiana.hpp  herllo.cpp  modelo.cpp  run.sh
